--- a/Code/25_04_27_Mismatch_results_generator.ipynb
+++ b/Code/25_04_27_Mismatch_results_generator.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "23bcee2e",
    "metadata": {},
    "outputs": [],
@@ -103,14 +103,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "cabefbb8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   No  Site ID        Country  State     kWp  Number of modules  Module size  \\\n",
+      "0   1  3455043      Australia    QLD   9.960               24.0          415   \n",
+      "1   2  4002138      Australia    VIC   6.660               18.0          370   \n",
+      "2   3  4034376      Australia     SA   6.650               14.0          475   \n",
+      "3   4  4140175      Australia    NSW   6.600               15.0          440   \n",
+      "4   5  4186157  North America  Texas  10.695               31.0          345   \n",
+      "\n",
+      "     Opt                 Module Make                       Module  \\\n",
+      "0   S440                      Q Cell       Q.PEAK DUO ML-G10+ 415   \n",
+      "1   S440              Canadian solar                   CS3L-370MS   \n",
+      "2   S500  JinkoSolar Holding Co. Ltd              JKM475N-60HL4-V   \n",
+      "3  S500B          Trina Solar Energy  TSM-440NEG9R.28 (Vertex S+)   \n",
+      "4   S440               Mission Solar          \\t\\nMSE345SX5T 345W   \n",
+      "\n",
+      "                                          Address Orientation Shade  \\\n",
+      "0            18 Greene Street, Newmarket, QLD, AU       Multi   Yes   \n",
+      "1         184 Blind Creek Road, Cardigan, VIC, AU      Single    No   \n",
+      "2        49 Weerana Road, Salisbury Plain, SA, AU      Single    No   \n",
+      "3          4 Cromarty Rd, Soldiers Point NSW 2317      Single   Yes   \n",
+      "4  2239 Cypress Pearl, San Antonio, TX 78232, USA      Single    No   \n",
+      "\n",
+      "  PV Syst Module Data Module Datasheet Telemtry Data  \n",
+      "0                 Yes              Yes           Yes  \n",
+      "1                 Yes              Yes           Yes  \n",
+      "2                 Yes              Yes           Yes  \n",
+      "3                 Yes              Yes           Yes  \n",
+      "4                 Yes              Yes           Yes  \n"
+     ]
+    }
+   ],
    "source": [
     "# Get all site_ids from the folder names in data_dir\n",
     "site_folders = [d for d in os.listdir(data_dir) if os.path.isdir(os.path.join(data_dir, d))]\n",
     "site_ids = [folder.split('_')[0] for folder in site_folders]\n",
+    "site_ids = ['4111846']\n",
     "\n",
     "# create a list of seasons to loop through\n",
     "seasons = ['spring', 'summer', 'autumn', 'winter']\n",
@@ -129,7 +164,24 @@
    "execution_count": null,
    "id": "5e3600bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing site_id: 4111846\n",
+      "Season directory found: C:\\Users\\z5183876\\OneDrive - UNSW\\Documents\\GitHub\\24_09_24_Solar_Edge\\Data\\4111846\\march\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\z5183876\\AppData\\Local\\Temp\\ipykernel_30968\\4134057333.py:185: FutureWarning: 'T' is deprecated and will be removed in a future version, please use 'min' instead.\n",
+      "  new_index = pd.date_range(start=earliest_timestamp, end=latest_timestamp, freq='5T')\n"
+     ]
+    }
+   ],
    "source": [
     "# for site_id in ['3794347']:\n",
     "for site_id in site_ids:\n",
@@ -631,11 +683,13 @@
     "            iv_sum_data = pd.concat([iv_sum_data, pd.DataFrame({'Timestamp': [timestamp_title], 'Sum of I*V (W)': [sum_iv]})], ignore_index=True)\n",
     "\n",
     "            # --- Titles and save ---\n",
+    "            percentage_diff_at_time = 0\n",
+    "            if sum_iv != 0:\n",
+    "                percentage_diff_at_time = ((sum_iv - max_power) / sum_iv) * 100\n",
     "            title_row1 = f\"Site: {site_id} | {timestamp_title}\"\n",
     "            title_row2 = f\"Sum of MPP: {sum_iv:.2f} W | Combined IV MPP: {max_power:.2f} W\"\n",
-    "            # title_row3 = \"Left: Raw IV | Middle: Model IV | Right: Combined IV\"\n",
-    "            # fig_long.suptitle(f\"{title_row1}\\n{title_row2}\\n{title_row3}\", fontsize=title_size)\n",
-    "            fig_long.suptitle(f\"{title_row1}\\n{title_row2}\", fontsize=title_size)\n",
+    "            title_row3 = f\"% Diff: {percentage_diff_at_time:.2f}%\"\n",
+    "            fig_long.suptitle(f\"{title_row1}\\n{title_row2}\\n{title_row3}\", fontsize=title_size)\n",
     "            plt.tight_layout(rect=[0, 0, 1, 0.90])\n",
     "            file_path = os.path.join(output_dir, f'long_horizontal_{timestamp_title.replace(\":\", \"-\").replace(\" \", \"_\")}.png')\n",
     "            plt.savefig(file_path, bbox_inches='tight')\n",
@@ -742,7 +796,48 @@
     "        fig.savefig(plot_file, dpi=300)\n",
     "        print(f\"Plot exported to: {plot_file}\")\n",
     "\n",
-    "        plt.show()"
+    "        plt.show()\n",
+    "\n",
+    "        # plot the percentage difference between Pmppt and Sum of I*V over time\n",
+    "        fig, ax = plt.subplots(figsize=long_hoz_figsize)\n",
+    "        percentage_diff = ((combined_data['Sum of I*V (W)'] - combined_data['Pmppt (W)']) / combined_data['Sum of I*V (W)']) * 100\n",
+    "        # if the sum of IV is less than 1, set the percentage difference to 0\n",
+    "        percentage_diff[combined_data['Sum of I*V (W)'] < 1] = 0\n",
+    "        abs_diff = (combined_data['Sum of I*V (W)'] - combined_data['Pmppt (W)']).abs()\n",
+    "\n",
+    "        # Plot percentage difference on primary y-axis\n",
+    "        ax.plot(combined_data['Timestamp'], percentage_diff, label='Percentage Difference (%)', alpha=0.4, color='orange')\n",
+    "        ax.set_xlabel('Time', fontsize=axis_label_size)\n",
+    "        ax.set_ylabel('Percentage Difference (%)', fontsize=axis_label_size)\n",
+    "\n",
+    "        # Create secondary y-axis for absolute difference\n",
+    "        ax2 = ax.twinx()\n",
+    "        ax2.plot(combined_data['Timestamp'], abs_diff, label='Absolute Difference (W)', alpha=0.4, color='blue')\n",
+    "        ax2.set_ylabel('Absolute Difference (W)', fontsize=axis_label_size)\n",
+    "\n",
+    "        first_month = pd.to_datetime(combined_data['Timestamp'].iloc[0]).strftime('%B')\n",
+    "        ax.set_title(\n",
+    "            f'Site ID: {site_id}, Month: {first_month}\\nMismatch: {sum_mismatch * 100:.2f}%',\n",
+    "            fontsize=title_size, pad=20\n",
+    "        )\n",
+    "\n",
+    "        # Combine legends from both axes\n",
+    "        lines_1, labels_1 = ax.get_legend_handles_labels()\n",
+    "        lines_2, labels_2 = ax2.get_legend_handles_labels()\n",
+    "        ax2.legend(lines_1 + lines_2, labels_1 + labels_2, loc='upper right', fontsize=axis_num_size-5)\n",
+    "\n",
+    "        ax.xaxis.set_major_locator(mdates.DayLocator(interval=2))\n",
+    "        ax.xaxis.set_major_formatter(mdates.DateFormatter('%b %d'))\n",
+    "        ax.tick_params(axis='x', labelsize=axis_num_size)\n",
+    "        ax.tick_params(axis='y', labelsize=axis_num_size)\n",
+    "        ax2.tick_params(axis='y', labelsize=axis_num_size)\n",
+    "        plt.tight_layout()\n",
+    "        fig.subplots_adjust(bottom=0.20)\n",
+    "        # Save + show\n",
+    "        plot_file = os.path.join(output_dir, 'percentage_difference.png')\n",
+    "        fig.savefig(plot_file, dpi=300)\n",
+    "        plt.show()\n",
+    "        print(f\"Percentage difference plot exported to: {plot_file}\")"
    ]
   }
  ],
