store the results in a seperate folder within v_from_i_combined instead of directly in v_from_i_combined

--- a/Code/25_04_27_Mismatch_results_generator.ipynb
+++ b/Code/25_04_27_Mismatch_results_generator.ipynb
@@ -449,9 +449,18 @@
     "        # now = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
     "        # results_folder = os.path.join(base_dir, f\"v_from_i_combined\\{site_id}_{season}_{now}\")\n",
     "        # os.makedirs(results_folder, exist_ok=True)\n",
+    "        # first_month = pd.to_datetime(merged_data['Timestamp'].iloc[0]).strftime('%B')\n",
+    "        # now = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
+    "        # results_folder = os.path.join(base_dir, f\"v_from_i_combined\\\\{site_id}_{first_month}_{now}\")\n",
+    "        # os.makedirs(results_folder, exist_ok=True)\n",
+    "        # Create date-based folder structure\n",
+    "        date_folder = datetime.datetime.now().strftime(\"%y_%m_%d_Results\")\n",
+    "        date_results_dir = os.path.join(base_dir, f\"v_from_i_combined\\\\{date_folder}\")\n",
+    "        os.makedirs(date_results_dir, exist_ok=True)\n",
+    "        \n",
     "        first_month = pd.to_datetime(merged_data['Timestamp'].iloc[0]).strftime('%B')\n",
     "        now = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
-    "        results_folder = os.path.join(base_dir, f\"v_from_i_combined\\\\{site_id}_{first_month}_{now}\")\n",
+    "        results_folder = os.path.join(date_results_dir, f\"{site_id}_{first_month}_{now}\")\n",
     "        os.makedirs(results_folder, exist_ok=True)\n",
     "\n",
     "        # save the figure to the results folder\n",
