Update the plot labelling for APSRC

--- a/Code/25_04_27_Mismatch_results_generator.ipynb
+++ b/Code/25_04_27_Mismatch_results_generator.ipynb
@@ -177,7 +177,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\z5183876\\AppData\\Local\\Temp\\ipykernel_30968\\4134057333.py:185: FutureWarning: 'T' is deprecated and will be removed in a future version, please use 'min' instead.\n",
+      "C:\\Users\\z5183876\\AppData\\Local\\Temp\\ipykernel_33148\\627764406.py:185: FutureWarning: 'T' is deprecated and will be removed in a future version, please use 'min' instead.\n",
       "  new_index = pd.date_range(start=earliest_timestamp, end=latest_timestamp, freq='5T')\n"
      ]
     }
@@ -455,7 +455,9 @@
     "        # os.makedirs(results_folder, exist_ok=True)\n",
     "        # Create date-based folder structure\n",
     "        date_folder = datetime.datetime.now().strftime(\"%y_%m_%d_Results\")\n",
-    "        date_results_dir = os.path.join(base_dir, f\"v_from_i_combined\\\\{date_folder}\")\n",
+    "        # Ensure we use the correct v_from_i_combined path\n",
+    "        v_from_i_combined_dir = r\"C:\\Users\\z5183876\\OneDrive - UNSW\\Documents\\GitHub\\24_09_24_Solar_Edge\\Results\\v_from_i_combined\"\n",
+    "        date_results_dir = os.path.join(v_from_i_combined_dir, date_folder)\n",
     "        os.makedirs(date_results_dir, exist_ok=True)\n",
     "        \n",
     "        first_month = pd.to_datetime(merged_data['Timestamp'].iloc[0]).strftime('%B')\n",
@@ -540,7 +542,7 @@
     "\n",
     "            # --- Prepare for all three plots ---\n",
     "            fig_long, axs_long = plt.subplots(1, 3, figsize=long_hoz_figsize)\n",
-    "            axs_long[0].set_title(\"Recorded MPP\", fontsize=title_size, pad=20)\n",
+    "            axs_long[0].set_title(\"Recorded MPP values\", fontsize=title_size, pad=20)\n",
     "            axs_long[0].set_xlim(x_limit_module)\n",
     "            axs_long[0].set_ylim(y_limit_module)\n",
     "            axs_long[0].set_xlabel('Voltage (V)', fontsize=axis_label_size)\n",
@@ -548,7 +550,7 @@
     "            # axs_long[0].grid(True)\n",
     "            axs_long[0].tick_params(axis='both', labelsize=axis_num_size)\n",
     "\n",
-    "            axs_long[1].set_title(\"Reconstructed IV Curves\", fontsize=title_size, pad=20)\n",
+    "            axs_long[1].set_title(\"Reconstructed I-V curves\", fontsize=title_size, pad=20)\n",
     "            axs_long[1].set_xlim(x_limit_module)\n",
     "            axs_long[1].set_ylim(y_limit_module)\n",
     "            axs_long[1].set_xlabel('Voltage (V)', fontsize=axis_label_size)\n",
@@ -556,7 +558,7 @@
     "            # axs_long[1].grid(True)\n",
     "            axs_long[1].tick_params(axis='both', labelsize=axis_num_size)\n",
     "\n",
-    "            axs_long[2].set_title(\"Series combined IV Curve\", fontsize=title_size, pad=20)\n",
+    "            axs_long[2].set_title(\"Series combined I-V curve\", fontsize=title_size, pad=20)\n",
     "            axs_long[2].set_xlim(x_limit_inverter)\n",
     "            axs_long[2].set_ylim(y_limit_inverter)\n",
     "            axs_long[2].set_xlabel('Voltage (V)', fontsize=axis_label_size)\n",
@@ -773,7 +775,7 @@
     "                alpha=0.4)\n",
     "        ax.plot(combined_data['Timestamp'],\n",
     "                combined_data['Sum of I*V (W)'],\n",
-    "                label='Sum of MPP',\n",
+    "                label='Sum of maximum powers',\n",
     "                alpha=0.4)\n",
     "\n",
     "        ax.set_xlabel('Time', fontsize=axis_label_size)\n",
